@@ -2,3 +2,6 @@
 
 %:
 	dh $@ --with python2
+
+override_dh_auto_build:
+	dh_auto_build -- --install-lib=foo
